[package]
name = "litetrace-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
thiserror = "1.0.30"

[build-dependencies]
bindgen = "0.59.2"
pkg-config = "0.3.24"
